--- a/a_service/pom.xml
+++ b/a_service/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.takioo</groupId>
-	<artifactId>A_service</artifactId>
+	<artifactId>a_service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>A_service</name>
-	<description>A_service of description</description>
+	<name>a_service</name>
+	<description>a_service of description</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
